--- a/PicoMIPS/.gitignore
+++ b/PicoMIPS/.gitignore
@@ -1,27 +1,2 @@
-# Aldec ActiveHDL .gitignore
-# Sergey Kostyuk, 2017, Public Domain
-
-*.asdb/
-log/
-Edfmap.ini
-*.wsp
-*.wsf
-*.log
-*.erf
-*.sth
-*.cmd
-compile/
-*.set
-
-# Comment to save compilation order:
-compilation.order
-projlib.cfg
-library.cfg
-*.lib
-*.mgf
-
-# Uncomment to ignore simulation results
-*.awc
-*.asdb
-synthesis.order
-synthesis/
+work/
+*.vcd
