Data Cache and testbench

--- a/PicoMIPS/.gitignore
+++ b/PicoMIPS/.gitignore
@@ -1,2 +1,14 @@
 work/
 *.vcd
+
+# Created by https://www.gitignore.io/api/visualstudiocode
+
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+
+# End of https://www.gitignore.io/api/visualstudiocode
