--- a/PicoMIPS/Makefile
+++ b/PicoMIPS/Makefile
@@ -4,7 +4,7 @@ WORKDIR := work
 VERSION := 08
 
 PACKAGES := pkgTypes.vhd pkgConstants.vhd # Manter essa ordem pq Constants usa types
-TARGETS  := add4.vhd MP.vhd mux2.vhd mux3.vhd register_bank.vhd PC.vhd RI.vhd sign_extend.vhd ULA.vhd ICache.vhd UC.vhd FD.vhd
+TARGETS  := add4.vhd MP.vhd mux2.vhd mux3.vhd register_bank.vhd PC.vhd RI.vhd sign_extend.vhd ULA.vhd ICache.vhd DCache.vhd UC.vhd FD.vhd
 
 TARGETS += $(wildcard */*.vhd)
 
@@ -39,8 +39,12 @@ ula_test:
 	$(GHDL) -r $(GHDLFLAGS) ULA_tb --vcd=$(WORKDIR)/$@.vcd
 	gtkwave $(WORKDIR)/$@.vcd
 
-cache_test:
-	$(GHDL) -r $(GHDLFLAGS) ICache_tb --stop-time=10us --vcd=$(WORKDIR)/$@.vcd
+icache_test:
+	$(GHDL) -r $(GHDLFLAGS) ICache_tb --stop-time=4700ns --vcd=$(WORKDIR)/$@.vcd
+	gtkwave $(WORKDIR)/$@.vcd
+
+dcache_test:
+	$(GHDL) -r $(GHDLFLAGS) DCache_tb --stop-time=8us --vcd=$(WORKDIR)/$@.vcd
 	gtkwave $(WORKDIR)/$@.vcd
 
 instructions_test:
