Simple FD with pipes (no pipeline)

--- a/PicoMIPS/Pipeline/Makefile
+++ b/PicoMIPS/Pipeline/Makefile
@@ -3,13 +3,19 @@ WORKDIR := work
 VERSION := 08
 
 PACKAGES := pkgTypes.vhd pkgConstants.vhd # Manter essa ordem pq Constants usa types
-TARGETS  := add4.vhd MP.vhd mux2.vhd mux3.vhd register_bank.vhd PC.vhd RI.vhd sign_extend.vhd ULA.vhd ICache.vhd DCache.vhd UC.vhd FD.vhd
+TARGETS :=
+TARGETS += add4.vhd MP.vhd mux2.vhd mux3.vhd               \
+	register_bank.vhd PC.vhd RI.vhd sign_extend.vhd        \
+	ULA.vhd ICache.vhd DCache.vhd UC.vhd
 
 TARGETS += $(wildcard stages/*.vhd)
 TARGETS += $(wildcard pipes/*.vhd)
+
+TARGETS += FD.vhd FD2.vhd
+
 TARGETS += $(wildcard testbenches/*.vhd)
 
-DEBUG := 1
+DEBUG  := 1
 VISUAL := 1
 
 GHDLFLAGS := --std=$(VERSION) --workdir=$(WORKDIR)
